raffia/tests/error/less/mixin/definition-missing-comma.snap
---
source: raffia/tests/error.rs
assertion_line: 51
---
error: expect token `;`, but found `{`
  ┌─ definition-missing-comma.less:1:15
  │
1 │ .mixin(@a @b) {}
  │               ^


